# device_testing_reference

IMU_QA_UI_Dev/: CMakeLists.txt  hh.txt  imu_device_session.cpp  imu_device_session.h  imu_qa_manager.cpp  imu_qa_manager.h  imu_types.h  imu_windows_ble_scanner.cpp  imu_windows_ble_scanner.h  imu_windows_connection.h  recoil_tracker.cpp
old imu/IMU_QA_UI_Dev/: CMakeLists.txt  imu_qa_manager.h  imu_windows_ble_scanner.h  imu_windows_connection.cpp
python/: ble_testing.py
